force-app/main/default/objects/NEILON__File_Access_Control__c/fields/NEILON__Download__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Download__c</fullName>
    <defaultValue>true</defaultValue>
    <description>User can &quot;Donwload&quot; the file from Amazon Server.</description>
    <inlineHelpText>If true, Grantee can &quot;Donwload&quot; the file from server.</inlineHelpText>
    <label>Download</label>
    <type>Checkbox</type>
</CustomField>