force-app/main/default/objects/NEILON__File_Access_Control__c/fields/NEILON__File__c.field-meta.xml
<CustomField>
    <fullName>NEILON__File__c</fullName>
    <description>File for access conrol.</description>
    <label>S3-File</label>
    <referenceTo>NEILON__File__c</referenceTo>
    <relationshipLabel>S3-File Access Controls</relationshipLabel>
    <relationshipName>File_Access_Control</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>