force-app/main/default/objects/NEILON__File_Access_Control__c/fields/NEILON__View__c.field-meta.xml
<CustomField>
    <fullName>NEILON__View__c</fullName>
    <defaultValue>true</defaultValue>
    <description>User can only &quot;View&quot; the file on Amazon Server.</description>
    <inlineHelpText>If true, Grantee can only &quot;View&quot; the file.</inlineHelpText>
    <label>View</label>
    <type>Checkbox</type>
</CustomField>